--- a/Online Booking Reservation Boat Rentals and Accommodation/css/interface.css
+++ b/Online Booking Reservation Boat Rentals and Accommodation/css/interface.css
@@ -54,6 +54,7 @@ body {
 .nav-logo {
     height: 70px;
     width: auto;
+    background-image: url('../img/timbook-carles-tourism.png');
     display: block;
     transition: all 0.4s ease;
 }
